...
                              indicatorColor: Colors.transparent,
                              tabs: [
                                Tab(
                                  text: 'Signup',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_qcnq'),
                                  text: 'Login',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      Flexible(
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('Signup-Email_6ola'),
                                            controller: _model
                                                .signupEmailTextController,
                                            focusNode:
                                                _model.signupEmailFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                          ),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Signup-Password_r2hf'),
                                          controller: _model
                                              .signupPasswordTextController,
                                          focusNode:
                                              _model.signupPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
...
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey(
                                              'Signup-ConfirmPassword_ho75'),
                                          controller: _model
                                              .signupConfirmPasswordTextController,
                                          focusNode: _model
                                              .signupConfirmPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.done,
...
                                  child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Login-Email_k1ry'),
                                          controller:
                                              _model.loginEmailTextController,
                                          focusNode: _model.loginEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.loginEmailTextController',
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Login-Password_t0pw'),
                                          controller: _model
                                              .loginPasswordTextController,
                                          focusNode:
                                              _model.loginPasswordFocusNode,
                                          onFieldSubmitted: (_) async {
                                            logFirebaseEvent(
...
                          ),
                        if (_model.tabBarCurrentIndex == 0)
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                30.0, 0.0, 0.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('Signup-Button_gp6i'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'LOGIN_PAGE_Signup-Button_ON_TAP');
                                logFirebaseEvent('Signup-Button_validate_form');
                                if (_model.formKey2.currentState == null ||
                                    !_model.formKey2.currentState!.validate()) {
...
                                logFirebaseEvent('Signup-Button_navigate_to');

                                context.goNamedAuth(
                                    ProfileSetupWidget.routeName,
                                    context.mounted);
                              },
                              text: 'Sign Up',
                              options: FFButtonOptions(
                                width: 300.0,
                                height: 70.0,
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    16.0, 0.0, 16.0, 0.0),
                                iconPadding: EdgeInsetsDirectional.fromSTEB(
...
