...
                                        child: Align(
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey('client_name_r2oi'),
                                              controller: _model
                                                  .clientNameTextController,
                                              focusNode:
                                                  _model.clientNameFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'client_address_xcm4'),
                                              controller: _model
                                                  .clientAddressTextController,
                                              focusNode:
                                                  _model.clientAddressFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key:
                                                  ValueKey('client_email_x7gk'),
                                              controller: _model
                                                  .clientEmailTextController,
                                              focusNode:
                                                  _model.clientEmailFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'client_phone_number_y36o'),
                                              controller: _model
                                                  .clientPhoneNumberTextController,
                                              focusNode: _model
                                                  .clientPhoneNumberFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                          ),
                        ),
                      ),
                      Align(
                        alignment: AlignmentDirectional(0.0, 0.0),
                        child: FFButtonWidget(
                          key: ValueKey('Button_vgnx'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'ADD_CLIENT_INFO_PAGE_CONTINUE_BTN_ON_TAP');
                            logFirebaseEvent('Button_validate_form');
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
...
                                  widget.companyInfo,
                                  ParamType.JSON,
                                ),
                              }.withoutNulls,
                            );
                          },
                          text: 'Continue',
                          options: FFButtonOptions(
                            width: 200.0,
                            height: 40.0,
                            padding: EdgeInsetsDirectional.fromSTEB(
                                16.0, 0.0, 16.0, 0.0),
                            iconPadding: EdgeInsetsDirectional.fromSTEB(
...
