...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key:
                                                  ValueKey('company_name_ak3c'),
                                              controller: _model
                                                  .companyNameTextController,
                                              focusNode:
                                                  _model.companyNameFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'company_email_ltrn'),
                                              controller: _model
                                                  .companyEmailTextController,
                                              focusNode:
                                                  _model.companyEmailFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                          alignment:
                                              AlignmentDirectional(0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'company_phone_number_b695'),
                                              controller: _model
                                                  .companyPhoneNumberTextController,
                                              focusNode: _model
                                                  .companyPhoneNumberFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                          ),
                        ),
                      ),
                      Align(
                        alignment: AlignmentDirectional(0.0, 0.0),
                        child: FFButtonWidget(
                          key: ValueKey('Button_3w8t'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'ADD_COMPANY_INFO_CONTINUE_BTN_ON_TAP');
                            logFirebaseEvent('Button_validate_form');
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
...
